src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Licensor_Full_Name__c</fullName>
        <description>The fully concatenated name of the Account Owner/Licensor</description>
        <formula>Owner.FirstName &amp; &quot; &quot; &amp;  Owner.LastName</formula>
        <inlineHelpText>Fully concatenated name of the Licensor</inlineHelpText>
        <label>Licensor Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensor_Phone__c</fullName>
        <formula>Owner.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensor_s_Manager_Email__c</fullName>
        <formula>Owner.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensor&apos;s Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_at_this_address__c</fullName>
        <label>Live at this address</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Locked_Facility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked Facility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Reformated__c</fullName>
        <label>Mailing Address Reformated</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MaxAgeServed__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MaxAgeServed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Age_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max. Age Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Age_Years_LG_SG__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max. Age Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinAgeServed__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MinAgeServed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Age_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Min. Age Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Age_Years_LG_SG__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Min. Age Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Program_Director_Licensee__c</fullName>
        <label>Most Recent Program Director / Licensee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_Age_Group_birth_14_yr__c</fullName>
        <label>Multi-Age Group (birth - 14 yr)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NUmber_Monitoring_Visit__c</fullName>
        <description>Calculate the number of monitoring visit. This is used in GSA to know if the next visit is Mid-Cycle or Monitoring</description>
        <label>Number Monitoring Visit</label>
        <summaryFilterItems>
            <field>Inspection__c.Type_of_Visit__c</field>
            <operation>equals</operation>
            <value>Monitoring</value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection__c.Provider_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Need_a_licensing_visit__c</fullName>
        <description>This formula is used to calculate if the Provider needs the creation of an automated visit or not. If yes, the text mention what type of visit is required.</description>
        <formula>IF( TEXT(License_Status__c) = &quot;Licensed&quot;,
/* Renewal visit creation */
IF(First_Issue_Date__c + 365 &lt; TODAY() &amp;&amp; TODAY() &gt;= Renewal_date__c - 125 &amp;&amp; TODAY() &lt;= Renewal_date__c - 120, Next_Renewal_Visit_Reason__c ,
/* Other visit creation */
IF( Record_Type_Name__c = &quot;Family Child Care&quot;,

IF( (First_Issue_Date__c + 305 /* 305 days used as 10 MONTHS */ &lt;= TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &amp;&amp; TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &lt;= First_Issue_Date__c + 310 /* 310 days used as 10 MONTHS +5 DAYS */) || (First_Issue_Date__c + 670 /* 670 days used as 22 MONTHS */ &lt;= TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &amp;&amp; TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &lt;= First_Issue_Date__c + 675 /* 675 days used as 22 MONTHS + 5 DAYS */)||
(License_For_10_Upgrade_Date__c + 150 /* 150 days used as 5 MONTHS */ &lt;= TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &amp;&amp; TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &lt;= License_For_10_Upgrade_Date__c + 155 /* 155 days used as 5 MONTHS + 5 DAYS */)||
(License_For_10_Upgrade_Date__c + 545 /* 545 days used as 18 MONTHS */ &lt;= TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &amp;&amp; TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &lt;= License_For_10_Upgrade_Date__c + 550 /* 550 days used as 18 MONTHS + 5 DAYS */), &quot;Progress&quot;, IF( (LastCalcDiffVisit__c + 365 /* 365 days used as 12 MONTHS */&lt;= TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &amp;&amp; TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &lt;= LastCalcDiffVisit__c + 370 /* 370 days used as 12 MONTHS + 5 DAYS */)&amp;&amp; Renewal_date__c - 180 /* 180 days used as 6 MONTHS */ &gt;= TODAY() , &quot;Monitoring&quot;, &quot;&quot;)),


IF( Is_GSA__c ,

IF( (First_Issue_Date__c + 180 /* 180 days used as 6 MONTHS */ &lt;= TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &amp;&amp;
TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &lt;=First_Issue_Date__c + 185 /* 185 days used as 6 MONTHS + 5 DAYS */), &quot;Provisional License Renewal&quot;,

IF( (LastCalcDiffVisit__c + 365 /* 365 days used as 12 MONTHS */&lt;= TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &amp;&amp; TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &lt;= LastCalcDiffVisit__c + 370 /* 370 days used as 12 MONTHS + 5 DAYS */)
&amp;&amp; Renewal_date__c - 180 /* 180 days used as 6 MONTHS */ &gt;= TODAY() , IF( Last_Mid_Cycle_Review_Date__c &lt;=TODAY()-1825 /* 1825 days used as 5 YEARS */||(ISBLANK(Last_Mid_Cycle_Review_Date__c) &amp;&amp; NUmber_Monitoring_Visit__c &gt; 1),&quot;Enhanced Monitoring&quot;,&quot;Monitoring&quot;), &quot;&quot;)),


IF( Is_R_P__c ,

IF( (First_Issue_Date__c + 180 /* 180 days used as 6 MONTHS */ &lt;= TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &amp;&amp;
TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &lt;=First_Issue_Date__c + 185 /* 185 days used as 6 MONTHS + 5 DAYS */), &quot;Provisional License Renewal&quot;,

IF((LastCalcDiffVisit__c + 365 /* 365 days used as 12 MONTHS */&lt;= TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &amp;&amp; TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &lt;= LastCalcDiffVisit__c + 370 /* 370 days used as 12 MONTHS + 5 DAYS */)
&amp;&amp; Renewal_date__c - 180 /* 180 days used as 6 MONTHS */ &gt;= TODAY()
,&quot;Monitoring&quot;,&quot;&quot;)

)
,&quot;&quot;))
)),

&quot;&quot;)</formula>
        <label>Need a licensing visit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_In_Last_60_Days__c</fullName>
        <formula>IF(  AND(ISPICKVAL( License_Status__c , &quot;Licensed&quot;),  TODAY() - First_Issue_Date__c &lt;= 60), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New In Last 60 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_FCC_Renewal_Visit__c</fullName>
        <label>Next FCC Renewal Visit</label>
        <picklist>
            <picklistValues>
                <fullName>Renewal - Full Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Enhanced Monitoring</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Renewal_Visit_Reason__c</fullName>
        <formula>IF( (Record_Type_Name__c &lt;&gt; &apos;Large Group&apos; &amp;&amp; Record_Type_Name__c &lt;&gt; &apos;Small Group&apos;), 
  IF( Last_Renewal_Visit_Reason__c == &apos;Renewal - Enhanced Monitoring&apos;, &apos;Renewal - Full Review&apos;, &apos;Renewal - Enhanced Monitoring&apos;),
  IF( Last_Renewal_Visit_Reason__c == &apos;Renewal - Full Review&apos;, &apos;Renewal - Monitoring&apos;, 
    IF( (Last_Renewal_Visit_Reason__c == &apos;Renewal - Monitoring&apos; &amp;&amp;  Previous_Licensing_Visit_Reason__c == &apos;Enhanced Monitoring&apos;), &apos;Renewal - Monitoring&apos;, &apos;Renewal - Full Review&apos;)
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Renewal Visit Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Open_Complaints_Investigations__c</fullName>
        <label>Number Of Open Complaints Investigations</label>
        <summaryFilterItems>
            <field>Investigation__c.Related_To_Complaint_Case__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Investigation__c.Investigation_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Investigation__c.Provider_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Children_Placed_in_Care__c</fullName>
        <inlineHelpText>For Foster Care Only</inlineHelpText>
        <label>Number of Children Placed in Care</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Expired__c</fullName>
        <formula>IF( Is_Expired_Provider__c, TODAY() -  Renewal_date__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days Expired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Foster_Homes__c</fullName>
        <inlineHelpText>For Foster Care Only</inlineHelpText>
        <label>Number of Foster Homes</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Transaction__c</fullName>
        <label>Number of FCC New License Submitted</label>
        <summaryFilterItems>
            <field>Licensing_Transaction__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled, To Submit</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Licensing_Transaction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>FCC New License</value>
        </summaryFilterItems>
        <summaryForeignKey>Licensing_Transaction__c.Provider__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Offsite_Outdoor_Play_Location__c</fullName>
        <label>Offsite Outdoor Play Location</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Approved_Additional_Space__c</fullName>
        <label>Other Approved Additional Space</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Countries__c</fullName>
        <label>Other Countries</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPM_Meeting_Attended_Date__c</fullName>
        <label>PPM Meeting Attended Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pool_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pool Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Non-English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preschool_33_mo_K__c</fullName>
        <label>Preschool (33 mo - K)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preschool_SA_33_mo_8_yr__c</fullName>
        <label>Preschool/SA (33 mo - 8 yr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Account_Owner__c</fullName>
        <label>Previous Account Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_License_Number__c</fullName>
        <label>Previous License Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Licensing_Visit_Reason__c</fullName>
        <inlineHelpText>Reason of the last licensing visit. Licensing visits are Pre-Licensing, Renewal - Full Review, Renewal - Enhanced Monitoring, Monitoring, Progress and Enhanced Monitoring. This field is automatically updated by the system when a visit is closed</inlineHelpText>
        <label>Previous Licensing Visit Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Type__c</fullName>
        <label>Previous Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Adoption__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Adoption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Age__c</fullName>
        <label>Program Age</label>
        <picklist>
            <picklistValues>
                <fullName>Adolescent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provide_Transportation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provide Transportation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_Address_1__c</fullName>
        <description>Provider Address Line 1</description>
        <label>Street Address 1</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Address_2__c</fullName>
        <description>Second line of Provider Address</description>
        <label>Street Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_City__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Provider City</description>
        <inlineHelpText>Select a valid town / city from Massachusetts</inlineHelpText>
        <label>City</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Umbrella</value>
            </filterItems>
            <filterItems>
                <field>City__c.State__c</field>
                <operation>equals</operation>
                <value>MA</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Umbrella</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Providers</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_Email_Template_Main_Contact__c</fullName>
        <description>This field is used in the Email Templates to Provider Email</description>
        <formula>IF(OR(RecordType.DeveloperName = &apos;FCC&apos;,  RecordType.Name = &quot;FCC Assistant&quot;), IF(NOT(ISBLANK(FCC_Main_Contact_Licensee__c)),FCC_Main_Contact_Licensee__c, &apos;Educator&apos;),
&quot;Provider&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Email Template Main Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Provider_Full_Address__c</fullName>
        <description>This field is used in some documents for printing.</description>
        <formula>Provider_Address_1__c &amp; IF(ISBLANK(Provider_Address_2__c),&quot;&quot;, &quot;, &quot; &amp; Provider_Address_2__c) &amp; &quot;, &quot; &amp;   Provider_City__r.Name &amp; &quot;, &quot; &amp;  TEXT(State__c) &amp; &quot; &quot; &amp;  Provider_Zip_Code__c</formula>
        <label>Provider Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Location__c</fullName>
        <label>Provider Location</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Provider_No__c</fullName>
        <description>Provider Number.  Begins with &quot;8&quot; for licensed Providers and &quot;5&quot; for unlicensed Providers</description>
        <externalId>true</externalId>
        <label>Legacy System Number</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Provider_Number__c</fullName>
        <displayFormat>P-{00000}</displayFormat>
        <label>Provider Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Provider_Status_Search__c</fullName>
        <description>This field is used to make Provider Status searchable. It is used in conjunction with the Provider Update process flow.</description>
        <label>Provider Status Search</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Status__c</fullName>
        <description>Provider.Status</description>
        <label>Provider Status</label>
        <picklist>
            <controllingField>License_Status__c</controllingField>
            <picklistValues>
                <fullName>Attended to PPM Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New application in progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal in progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region Freeze Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlicensed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Withdrawn / Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-open in Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provider_Zip_Code__c</fullName>
        <description>Provider Address Zip Code</description>
        <label>Zip Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_city_text__c</fullName>
        <formula>Provider_City__r.Name</formula>
        <label>Provider_city_text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the public approve?</inlineHelpText>
        <label>Public Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_on_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish on Web</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>American Indian/Alaskan Native</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black/African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Hawaiian/Other Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ratio_Comment__c</fullName>
        <label>Ratio Comment</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ratios__c</fullName>
        <inlineHelpText>Ratios for Group Care / Temporary Shelter Only</inlineHelpText>
        <label>Ratios</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Agency__c</fullName>
        <label>Referral Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referral Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_Address__c</fullName>
        <description>Region Address to be used in Email Templates.</description>
        <formula>Region__r.Street__c &amp; &quot;, &quot; &amp;   Region__r.City__c  &amp; &quot;, &quot; &amp;   Region__r.State__c  &amp; &quot; &quot; &amp;  Region__r.Zip__c</formula>
        <label>Region Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Email__c</fullName>
        <description>Region Email address to be used in Email Templates.</description>
        <formula>Region__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Fax__c</fullName>
        <description>Fax number associated with the Region, to be used in Email Templates.</description>
        <formula>Region__r.Fax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Phone__c</fullName>
        <description>This field is the region phone number and is used in email templates.</description>
        <formula>Region__r.Phone__c</formula>
        <label>Region Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Region this provider is assigned to</description>
        <label>Licensing Region</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Region__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Licensing Region</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Providers</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regulatory_Status__c</fullName>
        <label>Regulatory Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Restraint_Method__c</fullName>
        <label>Restraint Method</label>
        <picklist>
            <picklistValues>
                <fullName>ANV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PART</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOLVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAPPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NonRestraint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OWN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Varied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Restraint_Report_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restraint Report Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Age_5_yr_14_yr__c</fullName>
        <label>School Age (5 yr - 14 yr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secured_Facility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secured Facility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialties__c</fullName>
        <label>Specialties</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Renewal_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is check by the daily Renewal batch if Expiration Date of the license is in 120 days. When checked, it&apos;ll trigger a workflow that sends emails / reminders</description>
        <label>Start Renewal Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_For_Mailing__c</fullName>
        <description>City from the Mailing Address if one is available for provider, else the provider&apos;s City</description>
        <formula>IF( ISBLANK(ShippingState), text( State__c ),  ShippingState )</formula>
        <inlineHelpText>City from the Mailing Address if one is available for provider, else the provider&apos;s City</inlineHelpText>
        <label>State For Mailing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Provider State</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>MA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Last_Changed_Date__c</fullName>
        <description>Computes and displays the last date on which a Provider&apos;s status was changed</description>
        <inlineHelpText>Computes and displays the last date on which a Provider&apos;s status was changed</inlineHelpText>
        <label>Status Last Changed Date</label>
        <type>Date</type>
    </fields>
</CustomObject>